wrapped up final changes

--- a/public/error.html
+++ b/public/error.html
@@ -54,15 +54,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
 
     <title>
-      Bible Scholar | A positive, biblical and helpful social media app
+      Bible Scholar | Resource Not Found
     </title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
 
-    <script defer src="/build/bundle.js"></script>
   </head>
 
-  <body></body>
+  <body>
+      <section class="not-found-wrapper std-flex std-flex-row">
+        <img src="assets/images/logo.png"/>
+        <h1 class="big-title gradient-text">
+            OOPS! WE FOUND NOTHING HERE
+        </h1>
+        <a href="/" class="std-button with-icon" >Take me Back <span style="background-image: url(/assets/images/icons/arrow.png)" ></span></a>
+      </section>
+  </body>
 </html>
