--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords"
-          content="web app, bible scholar, commentary, posts, social media, like, coomment, quote, books, preaching, podcast, oneness, aljc, upci, wpf" />
-    <meta name="description"
-          content="Learning the word one verse at a time together. Share verser by verse commentaries, thoughts, quotes, sermon notes and more. Interact with others, react to their posts, access hundreds of location info and content" />
+    <meta
+      name="keywords"
+      content="web app, bible scholar, commentary, posts, social media, like, coomment, quote, books, preaching, podcast, oneness, aljc, upci, wpf"
+    />
+    <meta
+      name="description"
+      content="Learning the word one verse at a time together. Share verser by verse commentaries, thoughts, quotes, sermon notes and more. Interact with others, react to their posts, access hundreds of location info and content"
+    />
     <meta name="robots" content="index,follow" />
-    <meta name="url" content="https://biblescholar.com" />
-    <meta name="identifier-URL"
-          content="https://biblescholar.come" />
+    <meta name="url" content="https://biblescholar.app" />
+    <meta name="identifier-URL" content="https://biblescholar.app" />
 
     <!--Change this-->
     <meta name="directory" content="submission" />
@@ -19,15 +22,23 @@
     <meta name="rating" content="General" />
 
     <!-- OG TAGS -->
-    <meta name="og:title" content="Bible Scholar | A positive, biblical and helpful social media app" />
-    <meta property="og:url" content="https://biblescholar.com" />
+    <meta
+      name="og:title"
+      content="Bible Scholar | A positive, biblical and helpful social media app"
+    />
+    <meta property="og:url" content="https://biblescholar.app" />
 
     <!--Change this-->
-    <meta property="og:image" content="https://biblescholar.app/assets/images/logo.png" />
+    <meta
+      property="og:image"
+      content="https://biblescholar.app/assets/images/og_logo.png"
+    />
     <!--Change this-->
     <meta property="og:type" content="web app" />
-    <meta property="og:description"
-          content="Learning the word one verse at a time together" />
+    <meta
+      property="og:description"
+      content="Learning the word one verse at a time together"
+    />
     <meta property="og:locale" content="en_GB" />
     <meta name="og:site_name" content="Bible Scholar" />
 
@@ -45,19 +56,31 @@
     <meta name="blogcatalog" />
 
     <!--Twitter Tags-->
-    <meta name="twitter:title" content="Bible Scholar | A positive, biblical and helpful social media app">
-    <meta name="twitter:description" content="Learning the word one verse at a time together">
-    <meta name="twitter:image" content="https://biblescholar.app/assets/images/logo.png">
-    <meta name="twitter:site" content="https://biblescholar.com">
-    <meta name="twitter:creator" content="@Yodarango">
+    <meta
+      name="twitter:title"
+      content="Bible Scholar | A positive, biblical and helpful social media app"
+    />
+    <meta
+      name="twitter:description"
+      content="Learning the word one verse at a time together"
+    />
+    <meta
+      name="twitter:image"
+      content="https://biblescholar.app/assets/images/og_logo.png"
+    />
+    <meta name="twitter:site" content="https://biblescholar.app" />
+    <meta name="twitter:creator" content="@Yodarango" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 maximum-scale=1"
+    />
 
     <title>
       Bible Scholar | A positive, biblical and helpful social media app
     </title>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
 
